Use nvcc instead of g++

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,4 +1,5 @@
 all: helloworld
+  
 
 helloworld: helloworld.cc
-	g++ -I ../build/include	 -o helloworld helloworld.cc 
+        nvcc -I ../build/include -L ../build/lib  helloworld.cc -o helloworld
