Try to remove allreduce from nvcc_api pkg

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,5 +1,4 @@
 all: helloworld
-  
 
 helloworld: helloworld.cc
-        nvcc -I ../build/include -L ../build/lib  helloworld.cc -o helloworld
+        nvcc -I ../build/include -L ../build/lib  helloworld.cc -o helloworld ../build/lib/libnccl.so
