--- a/src/nccl.h.in
+++ b/src/nccl.h.in
@@ -130,14 +130,14 @@ typedef enum { ncclInt8       = 0, ncclChar       = 0,
  * below).
  */
 
-ncclResult_t  ncclSend(const void* sendbuff, size_t count, ncclDataType_t datatype,
+ncclResult_t  ncclSend(const int dst, const void* sendbuff, size_t count, ncclDataType_t datatype,
     int root, ncclComm_t comm, cudaStream_t stream);
-ncclResult_t pncclSend(const void* sendbuff, size_t count, ncclDataType_t datatype,
+ncclResult_t pncclSend(const int dst, const void* sendbuff, size_t count, ncclDataType_t datatype,
     int root, ncclComm_t comm, cudaStream_t stream);
 
-ncclResult_t  ncclRecv(const void* recvbuff, size_t count, ncclDataType_t datatype,
+ncclResult_t  ncclRecv(const int src, const void* recvbuff, size_t count, ncclDataType_t datatype,
  int root, ncclComm_t comm, cudaStream_t stream);
-ncclResult_t pncclRecv(const void* recvbuff, size_t count, ncclDataType_t datatype, 
+ncclResult_t pncclRecv(const int src, const void* recvbuff, size_t count, ncclDataType_t datatype, 
 int root, ncclComm_t comm, cudaStream_t stream);
 
 /*
